@@ -1,5 +1,11 @@
 2016-11-28  Pedro Alves  <pedro@palves.net>
 
+	* e-hal/src/epiphany-hal.c (e_halt_group): Change return type to
+	void.
+	(populate_platform_native): Return E_OK.
+
+2016-11-28  Pedro Alves  <pedro@palves.net>
+
 	* e-hal/src/epiphany-hal.c (e_init, ee_soft_reset_core)
 	(populate_platform_native): Remove unneeded locals.
 
